<resources>
    <string name="app_name">UShop</string>
    <string name="hint_email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="welcome_to_marketplace">Welcome to MarketPlace</string>
    <string name="welcome_to_advertisements">Welcome to Advertisements</string>
    <string name="welcome_to_notifications">Welcome to Notifications</string>
    <string name="welcome_to_user_profile">Welcome to User Profile</string>
    <string name="home_amp_g"><![CDATA[Home & G]]></string>
    <string name="closing">Closing</string>
    <string name="rentals">Rentals</string>
    <string name="vehicle">Vehicle</string>
    <string name="all_categories">All Categories</string>
    <string name="home_button_navigation_title">Home</string>
    <string name="market_button_navigation_title">Market</string>
    <string name="ads_button_navigation_title">Ads</string>
    <string name="notifications_button_navigation_menu">Notifications</string>
    <string name="user_profile_button_navigation_menu">Profile</string>
</resources>