<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_button_navigation_title" />
    <item

        android:id="@+id/storeFragment"
        android:icon="@drawable/ic_store"
        android:title="@string/market_button_navigation_title" />
    <item
        android:id="@+id/advertisementsFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/ads_button_navigation_title" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications_button_navigation_menu" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/user_profile_button_navigation_menu" />
</menu>