<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:backgroundTint="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_logo_home"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/u_shop_logo_transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_chat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.77"
                    app:layout_constraintStart_toEndOf="@+id/image_logo_home"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="5dip"
                    android:layout_marginRight="15dip"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toEndOf="@+id/image_logo_home"
                    app:layout_constraintStart_toStartOf="@+id/image_logo_home"
                    app:layout_constraintTop_toBottomOf="@+id/image_logo_home">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:iconifiedByDefault="false"
                        android:theme="@style/ThemeOverlay.AppCompat.Light" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="@id/app_bar"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:sliderAnimationDuration="1000"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="@color/custom_color_primary"
            app:sliderIndicatorUnselectedColor="@color/custom_color_secondary"
            app:sliderScrollTimeInSec="1"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@+id/slider">

            <ImageView
                android:id="@+id/imageView_home_and_gardens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/home_and_gardens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_amp_g"
                app:layout_constraintEnd_toEndOf="@+id/imageView_home_and_gardens"
                app:layout_constraintStart_toStartOf="@+id/imageView_home_and_gardens"
                app:layout_constraintTop_toBottomOf="@+id/imageView_home_and_gardens" />

            <ImageView
                android:id="@+id/imageView_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toEndOf="@+id/imageView_home_and_gardens"
                app:layout_constraintTop_toTopOf="@+id/imageView_home_and_gardens" />

            <TextView
                android:id="@+id/textView_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle"
                app:layout_constraintEnd_toEndOf="@+id/imageView_vehicle"
                app:layout_constraintStart_toStartOf="@+id/imageView_vehicle"
                app:layout_constraintTop_toBottomOf="@+id/imageView_vehicle" />

            <ImageView
                android:id="@+id/imageView_rentals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toEndOf="@+id/imageView_vehicle"
                app:layout_constraintTop_toTopOf="@+id/imageView_vehicle" />

            <TextView
                android:id="@+id/textView_rentals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rentals"
                app:layout_constraintEnd_toEndOf="@+id/imageView_rentals"
                app:layout_constraintStart_toStartOf="@+id/imageView_rentals"
                app:layout_constraintTop_toBottomOf="@+id/imageView_rentals" />

            <ImageView
                android:id="@+id/imageView_closing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toEndOf="@+id/imageView_rentals"
                app:layout_constraintTop_toTopOf="@+id/imageView_rentals" />

            <TextView
                android:id="@+id/textView_closing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closing"
                app:layout_constraintEnd_toEndOf="@+id/imageView_closing"
                app:layout_constraintStart_toStartOf="@+id/imageView_closing"
                app:layout_constraintTop_toBottomOf="@+id/imageView_closing" />

            <ImageView
                android:id="@+id/imageView_allCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_home"
                app:layout_constraintStart_toEndOf="@+id/imageView_closing"
                app:layout_constraintTop_toTopOf="@+id/imageView_closing" />

            <TextView
                android:id="@+id/allCategories_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_categories"
                app:layout_constraintEnd_toEndOf="@+id/imageView_allCategories"
                app:layout_constraintStart_toStartOf="@+id/imageView_allCategories"
                app:layout_constraintTop_toBottomOf="@+id/imageView_allCategories" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>